<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="8"
        tools:layout_editor_absoluteX="0dp">


        <TextView
            android:id="@+id/heightLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:gravity="center"
            android:text="@string/height"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/weightLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/weight"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_row="0" />

        <SeekBar
            android:id="@+id/heightSeekBar"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:max="250"
            android:min="1"
            android:progress="1"
            app:layout_column="0"
            app:layout_row="3" />

        <EditText
            android:id="@+id/weightTextView"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:ems="10"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:labelFor="@id/weightLabelTextView"
            android:text="@string/bmiValueDefault"
            android:textColor="@android:color/primary_text_light"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/bmiValueTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bmiValueDefault"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="70sp"
            app:layout_column="0"
            app:layout_row="6" />

        <TextView
            android:id="@+id/bmiLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:gravity="center"
            android:text="@string/bmiValue"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_row="5" />

        <TextView
            android:id="@+id/heightTextView"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:gravity="center"
            android:text="@string/heightDefault"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/checkCaloriesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="@string/checkCaloriesButton"
            app:layout_column="0"
            app:layout_row="7" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>